--- a/src/views/Tables.ejs
+++ b/src/views/Tables.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('./shared/head') -%>
-    <link rel="stylesheet" href="tables.css" />
+    <link rel="stylesheet" href="/tables.css" />
   </head>
 
   <body>
