--- a/src/views/shared/nav_header.ejs
+++ b/src/views/shared/nav_header.ejs
@@ -1,7 +1,7 @@
 <nav class="nav-header">
   <p>ACUG</p>
   <div class="nav-header-right">
-    <a href="tables">Stolovi</a>
-    <a href="orders">Nardužbe</a>
+    <a href="/tables">Stolovi</a>
+    <a href="/orders">Nardužbe</a>
   </div>
 </nav>
