add order service; small bugfixes

--- a/src/views/TablePendingOrder.ejs
+++ b/src/views/TablePendingOrder.ejs
@@ -21,8 +21,7 @@
         <div class="form-item">
           <p>
             <%= `Status: ${order.status === "pending" ? "Na čekanju" :
-            order.status === "delivered" ? "Isporučeno" : "accepted" :
-            "Prihvaćeno"}` %>
+            order.status === "delivered" ? "Isporučeno" : "Prihvaćeno"}` %>
           </p>
         </div>
       </div>
