--- a/src/views/TablePendingOrder.ejs
+++ b/src/views/TablePendingOrder.ejs
@@ -9,7 +9,7 @@
     <%- include('./shared/nav_header') -%>
 
     <div class="main-content">
-      <h1>Narudžba #<%= order.order_id %></h1>
+      <h1><%= table.name %></h1>
 
       <% if (err) { %>
       <div class="err">
@@ -19,6 +19,7 @@
 
       <div class="form">
         <div class="form-item">
+          <h4>Narudžba #<%= order.order_id %></h4>
           <p>
             <%= `Status: ${order.status === "pending" ? "Na čekanju" :
             order.status === "delivered" ? "Isporučeno" : "Prihvaćeno"}` %>
